2009-05-11  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-05-11  H.J. Lu  <hongjiu.lu@intel.com>

	PR middle-end/40080
	* gcc.c-torture/compile/pr40080.c: New.

	2009-05-11  Paolo Bonzini  <bonzini@gnu.org>

	* gcc.c-torture/compile/pr40026.c: New testcase.

	2009-05-09  Jan Hubicka  <jh@suse.cz>

	PR middle-end/40043
	* g++.dg/eh/nested-try.C: New test.

2009-05-11  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/40074
	* gcc.dg/vect/pr40074.c: New test.

2009-05-10  Paul Thomas  <pault@gcc.gnu.org>

	Backport from mainline:
	PR fortran/40018
	* gfortran.dg/array_constructor_31.f90: New test.

2009-05-10  Paul Thomas  <pault@gcc.gnu.org>

	Backport from mainline:
	PR fortran/38863
	* gfortran.dg/dependency_24.f90: New test.

2009-05-10  Paul Thomas  <pault@gcc.gnu.org>

	Backport from mainline:
	PR fortran/39879
	* gfortran.dg/alloc_comp_assign_10.f90: New test.

2009-04-10  David Billinghurst <billingd@gcc.gnu.org>

	PR fortran/38956
	* gfortran.dg/chmod_1.f90: Don't run on *-*-cygwin*.
	* gfortran.dg/chmod_2.f90: Likewise.
	* gfortran.dg/chmod_3.f90: Likewise.
	* gfortran.dg/open_errors.f90: Likewise.

2009-05-07  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/40057
	* gcc.c-torture/execute/pr40057.c: New test.

2009-05-06  Dodji Seketeli  <dodji@redhat.com>

	PR c++/17395
	* g++.dg/template/call7.C: New test.

2009-05-06  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-05-06  H.J. Lu  <hongjiu.lu@intel.com>

	PR middle-end/40021
	* gfortran.fortran-torture/execute/pr40021.f: New.

	2009-05-05  Richard Guenther  <rguenther@suse.de>

	PR middle-end/40023
	* gcc.c-torture/compile/pr40023.c: New testcase.

	2009-05-03  Richard Guenther  <rguenther@suse.de>

	PR c/39983
	* gcc.c-torture/compile/pr39983.c: New testcase.

2009-05-06  Janis Johnson  <janis187@us.ibm.com>

	* gcc.dg/dfp/pr39986.c: New test.

2009-05-06  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/40022